--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tiket_com
 excludes=
+file.reference.flatlaf-3.5.2.jar=D:\\Program Files\\Java\\flatlaf-3.5.2.jar
+file.reference.flatlaf-extras-3.5.2.jar=D:\\Program Files\\Java\\flatlaf-extras-3.5.2.jar
+file.reference.jsvg-1.3.0.jar=D:\\Program Files\\Java\\jsvg-1.3.0.jar
+file.reference.mysql-connector-j-9.1.0.jar=D:\\Program Files\\Java\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-j-9.1.0.jar}:\
+    ${file.reference.flatlaf-extras-3.5.2.jar}:\
+    ${file.reference.flatlaf-3.5.2.jar}:\
+    ${file.reference.jsvg-1.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
