--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tiket_com
 excludes=
+file.reference.glasspane-popup-2.0.1.jar=D:\\Kuliah\\Aplikasi\\glasspane-popup-2.0.1.jar
+file.reference.TimingFramework-0.55.jar=D:\\Kuliah\\Aplikasi\\timingframework-7.4.2\\login-001\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.glasspane-popup-2.0.1.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Tiket_com
-main.class=
+main.class=Awalan.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
