--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tiket_com
 excludes=
 file.reference.glasspane-popup-2.0.1.jar=D:\\Kuliah\\Aplikasi\\glasspane-popup-2.0.1.jar
+file.reference.miglayout-4.0.jar=D:\\Kuliah\\Aplikasi\\timingframework-7.4.2\\login-001\\miglayout-4.0.jar
 file.reference.mysql-connector-j-9.1.0.jar=D:\\Kuliah\\Aplikasi\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.TimingFramework-0.55.jar=D:\\Kuliah\\Aplikasi\\timingframework-7.4.2\\login-001\\TimingFramework-0.55.jar
 includes=**
@@ -42,7 +43,8 @@ javac.classpath=\
     ${file.reference.glasspane-popup-2.0.1.jar}:\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-9.1.0.jar}
+    ${file.reference.mysql-connector-j-9.1.0.jar}:\
+    ${file.reference.miglayout-4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
