--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tiket_com
 excludes=
+file.reference.flatlaf-3.5.2.jar=D:\\Kuliah\\Aplikasi\\Flatlaf\\flatlaf-3.5.2.jar
+file.reference.flatlaf-extras-3.5.2.jar=D:\\Kuliah\\Aplikasi\\Flatlaf\\flatlaf-extras-3.5.2.jar
 file.reference.glasspane-popup-2.0.1.jar=D:\\Kuliah\\Aplikasi\\glasspane-popup-2.0.1.jar
 file.reference.miglayout-4.0.jar=D:\\Kuliah\\Aplikasi\\timingframework-7.4.2\\login-001\\miglayout-4.0.jar
 file.reference.mysql-connector-j-9.1.0.jar=D:\\Kuliah\\Aplikasi\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
@@ -44,7 +46,9 @@ javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-9.1.0.jar}:\
-    ${file.reference.miglayout-4.0.jar}
+    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.flatlaf-3.5.2.jar}:\
+    ${file.reference.flatlaf-extras-3.5.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
