--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -92,7 +92,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Tiket_com
-main.class=main.tampilanutama
+main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
