--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tiket_com
 excludes=
+file.reference.datechooser.jar=C:\\Users\\ASUS\\Downloads\\datechooser.jar
 file.reference.flatlaf-3.5.2.jar=D:\\Program Files\\Java\\flatlaf-3.5.2.jar
 file.reference.flatlaf-3.5.2.jar-1=D:\\Kuliah\\Aplikasi\\Flatlaf\\flatlaf-3.5.2.jar
 file.reference.flatlaf-extras-3.5.2.jar=D:\\Program Files\\Java\\flatlaf-extras-3.5.2.jar
@@ -40,8 +41,14 @@ file.reference.flatlaf-extras-3.5.2.jar-1=D:\\Kuliah\\Aplikasi\\Flatlaf\\flatlaf
 file.reference.glasspane-popup-2.0.1.jar=D:\\Kuliah\\Aplikasi\\glasspane-popup-2.0.1.jar
 file.reference.jsvg-1.3.0.jar=D:\\Program Files\\Java\\jsvg-1.3.0.jar
 file.reference.miglayout-4.0.jar=D:\\Kuliah\\Aplikasi\\timingframework-7.4.2\\login-001\\miglayout-4.0.jar
+file.reference.miglayout-core.jar=D:\\Kuliah\\Aplikasi\\miglayout-core.jar
+file.reference.miglayout-swing.jar=D:\\Kuliah\\Aplikasi\\miglayout-swing.jar
+file.reference.modal-dialog-demo-2.1.0.jar=D:\\Kuliah\\Aplikasi\\modal-dialog-demo-2.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar=D:\\Program Files\\Java\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar-1=D:\\Kuliah\\Aplikasi\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
+file.reference.raven-bean-pack-2.0.0.jar=C:\\Users\\ASUS\\Downloads\\raven-bean-pack-2.0.0.jar
+file.reference.swing-crazy-panel-1.0.0.jar=D:\\Kuliah\\Aplikasi\\swing-crazy-panel-1.0.0.jar
+file.reference.swing-datetime-picker-1.2.3.jar=D:\\Kuliah\\Aplikasi\\swing-datetime-picker-1.2.3.jar
 file.reference.TimingFramework-0.55.jar=D:\\Kuliah\\Aplikasi\\timingframework-7.4.2\\login-001\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
@@ -56,7 +63,14 @@ javac.classpath=\
     ${file.reference.miglayout-4.0.jar}:\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-9.1.0.jar-1}
+    ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
+    ${file.reference.modal-dialog-demo-2.1.0.jar}:\
+    ${file.reference.swing-datetime-picker-1.2.3.jar}:\
+    ${file.reference.miglayout-core.jar}:\
+    ${file.reference.miglayout-swing.jar}:\
+    ${file.reference.swing-crazy-panel-1.0.0.jar}:\
+    ${file.reference.raven-bean-pack-2.0.0.jar}:\
+    ${file.reference.datechooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
