--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Tiket_com
+application.vendor=hilmy
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,8 +33,8 @@ dist.jar=${dist.dir}/Tiket_com.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Tiket_com
+endorsed.classpath=
 excludes=
-file.reference.datechooser.jar=C:\\Users\\ASUS\\Downloads\\datechooser.jar
 file.reference.flatlaf-3.5.2.jar=D:\\Program Files\\Java\\flatlaf-3.5.2.jar
 file.reference.flatlaf-3.5.2.jar-1=D:\\Kuliah\\Aplikasi\\Flatlaf\\flatlaf-3.5.2.jar
 file.reference.flatlaf-extras-3.5.2.jar=D:\\Program Files\\Java\\flatlaf-extras-3.5.2.jar
@@ -48,7 +49,6 @@ file.reference.mysql-connector-j-9.1.0.jar=D:\\Program Files\\Java\\mysql-connec
 file.reference.mysql-connector-j-9.1.0.jar-1=D:\\Kuliah\\Aplikasi\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.raven-bean-pack-2.0.0.jar=C:\\Users\\ASUS\\Downloads\\raven-bean-pack-2.0.0.jar
 file.reference.swing-crazy-panel-1.0.0.jar=D:\\Kuliah\\Aplikasi\\swing-crazy-panel-1.0.0.jar
-file.reference.swing-datetime-picker-1.2.3.jar=D:\\Kuliah\\Aplikasi\\swing-datetime-picker-1.2.3.jar
 file.reference.TimingFramework-0.55.jar=D:\\Kuliah\\Aplikasi\\timingframework-7.4.2\\login-001\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
@@ -65,12 +65,10 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
     ${file.reference.modal-dialog-demo-2.1.0.jar}:\
-    ${file.reference.swing-datetime-picker-1.2.3.jar}:\
     ${file.reference.miglayout-core.jar}:\
     ${file.reference.miglayout-swing.jar}:\
     ${file.reference.swing-crazy-panel-1.0.0.jar}:\
-    ${file.reference.raven-bean-pack-2.0.0.jar}:\
-    ${file.reference.datechooser.jar}
+    ${file.reference.raven-bean-pack-2.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -106,7 +104,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Tiket_com
-main.class=com.loket.main.Main
+main.class=Awalan.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
